--- a/src/controller.html
+++ b/src/controller.html
@@ -155,6 +155,12 @@
       padding: 4px 8px;
       flex: 1;
     }
+
+    /* パフォーマンスリンクのホバー効果 */
+    a[href="/src/performance.html"]:hover {
+      background: #e8e8e8 !important;
+      border-color: #999 !important;
+    }
   </style>
   <div>
     <label for="output-meter">Output Level:</label>
@@ -210,6 +216,160 @@
       Note: Visualizers open in separate Tauri native windows. In browser mode, popups must be allowed.
     </div>
   </div>
+
+  <!-- パフォーマンスページとビジュアライザー、奏者用画面のリンク -->
+  <div style="margin-top: 1em; padding: 0.5em; border-top: 1px solid #ddd;">
+    <div style="margin-bottom: 8px;">
+      <a href="/src/performance.html" style="display: inline-block; 
+                padding: 8px 16px; 
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background: #f5f5f5;
+                color: #333; 
+                text-decoration: none;
+                font-size: 14px;
+                margin-right: 8px;
+                transition: background 0.2s;">
+        Launch Performance Page
+      </a>
+      <a href="/src/visualizer.html" style="display: inline-block; 
+                padding: 8px 16px; 
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background: #f5f5f5;
+                color: #333; 
+                text-decoration: none;
+                font-size: 14px;
+                transition: background 0.2s;">
+        Launch Visualizer
+      </a>
+    </div>
+    <div>
+      <span style="font-size: 12px; color: #666; margin-right: 8px;">Player Screens:</span>
+      <a href="/src/player.html?player=1" style="display: inline-block; 
+                padding: 6px 12px; 
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background: #f5f5f5;
+                color: #333; 
+                text-decoration: none;
+                font-size: 13px;
+                margin-right: 6px;
+                transition: background 0.2s;">
+        Player 1
+      </a>
+      <a href="/src/player.html?player=2" style="display: inline-block; 
+                padding: 6px 12px; 
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background: #f5f5f5;
+                color: #333; 
+                text-decoration: none;
+                font-size: 13px;
+                margin-right: 6px;
+                transition: background 0.2s;">
+        Player 2
+      </a>
+      <a href="/src/player.html?player=3" style="display: inline-block; 
+                padding: 6px 12px; 
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background: #f5f5f5;
+                color: #333; 
+                text-decoration: none;
+                font-size: 13px;
+                transition: background 0.2s;">
+        Player 3
+      </a>
+    </div>
+  </div>
+
+  <!-- ============================================ -->
+  <!-- 開発・デバッグ用: プレイヤー画面テストコントロール -->
+  <!-- 本番環境では以下のブロックを削除してください -->
+  <!-- ============================================ -->
+  <div style="margin-top: 1em; padding: 0.5em; border-top: 1px solid #ddd;">
+    <h4 style="margin: 0 0 0.5em 0; font-size: 14px;">Player Screen Test Controls</h4>
+    <div style="margin-bottom: 0.5em;">
+      <button id="test-pulse" style="padding: 8px 16px; 
+                  margin-right: 8px;
+                  border: 1px solid #4CAF50;
+                  border-radius: 4px;
+                  background: #4CAF50;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Trigger Metronome Pulse
+      </button>
+      <button id="test-rehearsal" style="padding: 8px 16px; 
+                  margin-right: 8px;
+                  border: 1px solid #2196F3;
+                  border-radius: 4px;
+                  background: #2196F3;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Next Rehearsal Mark
+      </button>
+      <button id="test-countdown" style="padding: 8px 16px; 
+                  border: 1px solid #FF9800;
+                  border-radius: 4px;
+                  background: #FF9800;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Show Countdown (4 bars)
+      </button>
+    </div>
+    <div>
+      <button id="test-current-section" style="padding: 8px 16px; 
+                  margin-right: 8px;
+                  border: 1px solid #9C27B0;
+                  border-radius: 4px;
+                  background: #9C27B0;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Set Current Section
+      </button>
+      <button id="test-next-section" style="padding: 8px 16px; 
+                  margin-right: 8px;
+                  border: 1px solid #673AB7;
+                  border-radius: 4px;
+                  background: #673AB7;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Set Next Section
+      </button>
+      <button id="test-hide-next" style="padding: 8px 16px; 
+                  border: 1px solid #757575;
+                  border-radius: 4px;
+                  background: #757575;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Hide Next Section
+      </button>
+    </div>
+    <div style="margin-top: 0.5em; display: flex; align-items: center; gap: 8px;">
+      <label for="countdown-seconds" style="font-size: 14px;">Countdown (seconds):</label>
+      <input type="number" id="countdown-seconds" min="1" max="60" value="5"
+        style="width: 60px; padding: 6px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
+      <button id="test-countdown-seconds" style="padding: 8px 16px; 
+                  border: 1px solid #E91E63;
+                  border-radius: 4px;
+                  background: #E91E63;
+                  color: white;
+                  cursor: pointer;
+                  font-size: 14px;">
+        Start Countdown
+      </button>
+    </div>
+  </div>
+  <!-- ============================================ -->
+  <!-- プレイヤー画面テストコントロール ここまで -->
+  <!-- ============================================ -->
 
   <pre id="debug-log" style="height:120px;overflow:auto;background:#eee"></pre>
   <script type="module" src="controller.ts"></script>
