feat: VexFlowを使用した楽譜レンダラーの追加とプレイヤー画面のスコア表示エリアの修正

--- a/src/player.html
+++ b/src/player.html
@@ -429,7 +429,7 @@
                     <span class="section-name" id="current-section-name"></span>
                 </div>
 
-                <div class="score-area">
+                <div class="score-area" id="current-score-area">
                     [楽譜表示エリア]
                 </div>
 
@@ -456,7 +456,7 @@
                     <span class="section-name" id="next-section-name"></span>
                 </div>
 
-                <div class="score-area">
+                <div class="score-area" id="next-score-area">
                     [楽譜プレビュー]
                 </div>
 
