--- a/src/performance.html
+++ b/src/performance.html
@@ -4,265 +4,400 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acoustic Automaton - Live Performance</title>
+  <title>Performance Control - Acoustic Automaton</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      padding: 20px;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-      color: white;
+      padding: 0;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      background: #ffffff;
+      color: #1a1a1a;
+      padding: 2rem;
       min-height: 100vh;
     }
 
-    .performance-container {
+    .container {
       max-width: 1200px;
       margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
     }
 
-    .header {
-      text-align: center;
-      padding: 20px 0;
-      border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+    h1 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+      color: #1a1a1a;
     }
 
-    .header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      font-weight: 300;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    .subtitle {
+      font-size: 1rem;
+      color: #666;
+      margin-bottom: 2rem;
     }
 
-    .header p {
-      margin: 10px 0 0 0;
-      font-size: 1.2em;
-      opacity: 0.8;
-    }
-
-    .control-panel {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 15px;
-      padding: 30px;
-      text-align: center;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-    }
-
-    .transport-controls {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 20px 0;
-    }
-
-    .control-button {
-      background: linear-gradient(145deg, #4CAF50, #45a049);
-      border: none;
-      border-radius: 50px;
-      color: white;
-      font-size: 1.1em;
-      font-weight: bold;
-      padding: 15px 30px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-      min-width: 120px;
-    }
-
-    .control-button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .control-button:active {
-      transform: translateY(0);
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .control-button.play {
-      background: linear-gradient(145deg, #4CAF50, #45a049);
-    }
-
-    .control-button.pause {
-      background: linear-gradient(145deg, #FF9800, #F57C00);
-    }
-
-    .control-button.stop {
-      background: linear-gradient(145deg, #f44336, #d32f2f);
-    }
-
-    .control-button.reset {
-      background: linear-gradient(145deg, #607D8B, #455A64);
-    }
-
-    .control-button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-      transform: none;
-    }
-
+    /* ステータス表示 */
     .status-panel {
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
+      background: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
     }
 
     .status-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 15px;
+      gap: 1rem;
     }
 
     .status-item {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
     }
 
     .status-label {
-      font-size: 0.9em;
-      opacity: 0.7;
-      margin-bottom: 5px;
+      font-size: 0.875rem;
+      color: #666;
+      font-weight: 500;
     }
 
     .status-value {
-      font-size: 1.4em;
-      font-weight: bold;
-      color: #4CAF50;
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #1a1a1a;
     }
 
+    .status-value.active {
+      color: #4caf50;
+    }
+
+    .status-value.paused {
+      color: #ff9800;
+    }
+
+    .status-value.stopped {
+      color: #999;
+    }
+
+    /* コントロールボタン */
+    .control-panel {
+      background: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .control-panel h2 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      color: #1a1a1a;
+    }
+
+    .button-group {
+      display: flex;
+      gap: 0.75rem;
+      flex-wrap: wrap;
+    }
+
+    button {
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 500;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      background: #ffffff;
+      color: #1a1a1a;
+      cursor: pointer;
+      transition: all 0.2s;
+      min-width: 120px;
+    }
+
+    button:hover {
+      background: #f5f5f5;
+      border-color: #999;
+    }
+
+    button:active {
+      background: #e8e8e8;
+      transform: translateY(1px);
+    }
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    button.primary {
+      background: #2a2a2a;
+      color: #ffffff;
+      border-color: #2a2a2a;
+    }
+
+    button.primary:hover {
+      background: #1a1a1a;
+      border-color: #1a1a1a;
+    }
+
+    button.primary:active {
+      background: #0a0a0a;
+    }
+
+    button.danger {
+      background: #f44336;
+      color: #ffffff;
+      border-color: #f44336;
+    }
+
+    button.danger:hover {
+      background: #d32f2f;
+      border-color: #d32f2f;
+    }
+
+    button.success {
+      background: #4caf50;
+      color: #ffffff;
+      border-color: #4caf50;
+    }
+
+    button.success:hover {
+      background: #45a049;
+      border-color: #45a049;
+    }
+
+    /* ログ表示 */
     .log-panel {
-      background: rgba(0, 0, 0, 0.3);
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
+      background: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
     }
 
-    .log-output {
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 5px;
-      padding: 15px;
-      height: 150px;
+    .log-panel h2 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      color: #1a1a1a;
+    }
+
+    #log-output {
+      background: #ffffff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 1rem;
+      max-height: 300px;
       overflow-y: auto;
-      font-family: 'Courier New', monospace;
-      font-size: 0.9em;
-      color: #00ff00;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      font-family: 'Monaco', 'Courier New', monospace;
+      font-size: 0.875rem;
+      line-height: 1.5;
+      color: #333;
     }
 
-    .performance-info {
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      text-align: center;
+    #log-output div {
+      margin-bottom: 0.25rem;
     }
 
-    .emoji {
-      font-size: 2em;
-      margin: 0 10px;
+    /* トラック管理 */
+    .track-panel {
+      background: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1.5rem;
     }
 
-    @media (max-width: 768px) {
-      .transport-controls {
-        flex-direction: column;
-        align-items: center;
-      }
+    .track-panel h2 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      color: #1a1a1a;
+    }
 
-      .control-button {
-        width: 200px;
-      }
+    .track-list {
+      display: grid;
+      gap: 0.75rem;
+    }
 
-      .status-grid {
-        grid-template-columns: 1fr;
-      }
+    .track-item {
+      background: #ffffff;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 1rem;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .track-info {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+
+    .track-name {
+      font-weight: 600;
+      color: #1a1a1a;
+    }
+
+    .track-status {
+      font-size: 0.875rem;
+      color: #666;
+    }
+
+    .track-status.active {
+      color: #4caf50;
+      font-weight: 500;
+    }
+
+    /* リンクセクション */
+    .links-section {
+      margin-top: 2rem;
+      padding-top: 2rem;
+      border-top: 1px solid #ddd;
+    }
+
+    .links-section h2 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      color: #1a1a1a;
+    }
+
+    .links-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+
+    .link-card {
+      background: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 1rem;
+      text-decoration: none;
+      color: #1a1a1a;
+      transition: all 0.2s;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .link-card:hover {
+      background: #e8e8e8;
+      border-color: #999;
+      transform: translateY(-2px);
+    }
+
+    .link-title {
+      font-weight: 600;
+      font-size: 1rem;
+    }
+
+    .link-description {
+      font-size: 0.875rem;
+      color: #666;
     }
   </style>
 </head>
 
 <body>
-  <div class="performance-container">
-    <!-- Header -->
-    <div class="header">
-      <h1>🎪 Acoustic Automaton Automatonic Assembly</h1>
-      <p>Live Electronics Performance System</p>
-    </div>
+  <div class="container">
+    <h1>🎪 Performance Control</h1>
+    <p class="subtitle">Acoustic Automaton Live Electronics Performance System</p>
 
-    <!-- Main Control Panel -->
-    <div class="control-panel">
-      <h2>🎛️ Performance Controls</h2>
-
-      <!-- Transport Controls -->
-      <div class="transport-controls">
-        <button id="play-btn" class="control-button play">
-          <span class="emoji">▶️</span> 再生
-        </button>
-        <button id="pause-btn" class="control-button pause">
-          <span class="emoji">⏸️</span> 一時停止
-        </button>
-        <button id="stop-btn" class="control-button stop">
-          <span class="emoji">⏹️</span> 停止
-        </button>
-        <button id="reset-btn" class="control-button reset">
-          <span class="emoji">🔄</span> リセット
-        </button>
-      </div>
-
-      <!-- Status Panel -->
-      <div class="status-panel">
-        <h3>📊 System Status</h3>
-        <div class="status-grid">
-          <div class="status-item">
-            <div class="status-label">Performance State</div>
-            <div id="performance-state" class="status-value">Stopped</div>
-          </div>
-          <div class="status-item">
-            <div class="status-label">Elapsed Time</div>
-            <div id="elapsed-time" class="status-value">00:00</div>
-          </div>
-          <div class="status-item">
-            <div class="status-label">Active Tracks</div>
-            <div id="active-tracks" class="status-value">0</div>
-          </div>
-          <div class="status-item">
-            <div class="status-label">Audio Status</div>
-            <div id="audio-status" class="status-value">Ready</div>
-          </div>
+    <!-- ステータスパネル -->
+    <div class="status-panel">
+      <div class="status-grid">
+        <div class="status-item">
+          <span class="status-label">Status</span>
+          <span class="status-value stopped" id="status-display">Stopped</span>
+        </div>
+        <div class="status-item">
+          <span class="status-label">Elapsed Time</span>
+          <span class="status-value" id="time-display">00:00</span>
+        </div>
+        <div class="status-item">
+          <span class="status-label">Active Tracks</span>
+          <span class="status-value" id="tracks-display">0</span>
         </div>
       </div>
     </div>
 
-    <!-- Log Panel -->
-    <div class="log-panel">
-      <h3>📝 Performance Log</h3>
-      <div id="log-output" class="log-output">
-        [00:00:00] Acoustic Automaton Performance System initialized<br>
-        [00:00:00] Waiting for user interaction...<br>
+    <!-- コントロールパネル -->
+    <div class="control-panel">
+      <h2>Performance Controls</h2>
+      <div class="button-group">
+        <button id="play-btn" class="success">▶ Play</button>
+        <button id="pause-btn" disabled>⏸ Pause</button>
+        <button id="stop-btn" class="danger" disabled>⏹ Stop</button>
+        <button id="reset-btn">🔄 Reset</button>
       </div>
     </div>
 
-    <!-- Performance Info -->
-    <div class="performance-info">
-      <h3>🎼 About This Performance</h3>
-      <p>
-        このシステムは、リアルタイム音響処理とライブエレクトロニクスのための
-        統合パフォーマンス環境です。Phase 5 Live Electronics Performance Systemとして、
-        TrackManager、LiveMixer、MusicalTimeManagerが連携して動作します。
-      </p>
-      <p>
-        <strong>🎯 Features:</strong>
-        Real-time Audio Processing • Live Mixing • Click Track • Internal Synthesizer • Performance Control
-      </p>
+    <!-- トラック管理 -->
+    <div class="track-panel">
+      <h2>Audio Tracks</h2>
+      <div class="track-list" id="track-list">
+        <div class="track-item">
+          <div class="track-info">
+            <span class="track-name">Track 1</span>
+            <span class="track-status">Inactive</span>
+          </div>
+          <button onclick="toggleTrack(1)">Enable</button>
+        </div>
+        <div class="track-item">
+          <div class="track-info">
+            <span class="track-name">Track 2</span>
+            <span class="track-status">Inactive</span>
+          </div>
+          <button onclick="toggleTrack(2)">Enable</button>
+        </div>
+        <div class="track-item">
+          <div class="track-info">
+            <span class="track-name">Track 3</span>
+            <span class="track-status">Inactive</span>
+          </div>
+          <button onclick="toggleTrack(3)">Enable</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ログパネル -->
+    <div class="log-panel">
+      <h2>System Log</h2>
+      <div id="log-output">
+        <div>🎪 Performance Controller initialized</div>
+        <div>System ready for performance</div>
+      </div>
+    </div>
+
+    <!-- リンクセクション -->
+    <div class="links-section">
+      <h2>Related Pages</h2>
+      <div class="links-grid">
+        <a href="/src/controller.html" class="link-card">
+          <span class="link-title">🎛️ System Controller</span>
+          <span class="link-description">Audio settings and device management</span>
+        </a>
+        <a href="/src/player.html?player=1" class="link-card">
+          <span class="link-title">🎵 Player View</span>
+          <span class="link-description">Individual performer interface</span>
+        </a>
+        <a href="/src/visualizer.html" class="link-card">
+          <span class="link-title">👁️ Visualizer</span>
+          <span class="link-description">Audio visualization display</span>
+        </a>
+      </div>
     </div>
   </div>
 
-  <script type="module" src="performance.ts"></script>
+  <script type="module" src="/src/performance.ts"></script>
 </body>
 
 </html>
