feat: Add composition timeline and websocket relay for performance management
- Implemented a comprehensive composition timeline in `src/works/composition.ts` that defines the structure of musical works, including performers, events, sections, and tempo markings.
- Added utility functions for retrieving tempo, sections, and events based on musical time.
- Created a websocket relay server in `tools/websocket-relay.mjs` to facilitate real-time communication between clients during performances, including connection handling and message broadcasting.

--- a/src/controller.html
+++ b/src/controller.html
@@ -244,6 +244,21 @@
         Launch Visualizer
       </a>
     </div>
+    <div style="margin-top: 8px;">
+      <a href="/network-urls.html" target="_blank" style="display: inline-block; 
+                padding: 8px 16px; 
+                border: 2px solid #667eea;
+                border-radius: 4px;
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white; 
+                text-decoration: none;
+                font-size: 14px;
+                font-weight: 600;
+                transition: all 0.2s;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        🌐 Network URLs (演奏者用URL一覧)
+      </a>
+    </div>
     <div>
       <span style="font-size: 12px; color: #666; margin-right: 8px;">Player Screens:</span>
       <a href="/src/player.html?player=1" style="display: inline-block; 
