--- a/src/performance.html
+++ b/src/performance.html
@@ -308,7 +308,7 @@
 
 <body>
   <div class="container">
-    <h1>🎪 Performance Control</h1>
+    <h1>Performance Control</h1>
     <p class="subtitle">Acoustic Automaton Live Electronics Performance System</p>
 
     <!-- ステータスパネル -->
@@ -333,10 +333,10 @@
     <div class="control-panel">
       <h2>Performance Controls</h2>
       <div class="button-group">
-        <button id="play-btn" class="success">▶ Play</button>
-        <button id="pause-btn" disabled>⏸ Pause</button>
-        <button id="stop-btn" class="danger" disabled>⏹ Stop</button>
-        <button id="reset-btn">🔄 Reset</button>
+        <button id="play-btn" class="success">Play</button>
+        <button id="pause-btn" disabled>Pause</button>
+        <button id="stop-btn" class="danger" disabled>Stop</button>
+        <button id="reset-btn">Reset</button>
       </div>
     </div>
 
