--- a/src/player.html
+++ b/src/player.html
@@ -29,6 +29,83 @@
             height: 100%;
         }
 
+        .player-notification-container {
+            position: fixed;
+            top: clamp(16px, 3vh, 32px);
+            right: clamp(16px, 3vw, 36px);
+            display: flex;
+            flex-direction: column;
+            gap: clamp(8px, 1.5vh, 12px);
+            z-index: 1200;
+            pointer-events: none;
+        }
+
+        .player-notification {
+            background: rgba(8, 8, 8, 0.92);
+            color: #f5f5f5;
+            border: 1px solid rgba(255, 255, 255, 0.14);
+            border-left: 4px solid var(--accent-color, #f5f5f5);
+            padding: clamp(12px, 2vh, 16px) clamp(16px, 3vw, 22px);
+            min-width: clamp(200px, 32vw, 280px);
+            max-width: clamp(240px, 42vw, 340px);
+            border-radius: 10px;
+            font-size: clamp(0.75rem, 1.8vh, 0.95rem);
+            line-height: 1.4;
+            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.32);
+            opacity: 0;
+            transform: translateY(-12px);
+            transition: opacity 0.28s ease, transform 0.28s ease;
+        }
+
+        .player-notification.is-visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .player-notification__message {
+            white-space: pre-wrap;
+            word-break: break-word;
+            letter-spacing: 0.015em;
+        }
+
+        .player-cue-overlay {
+            position: fixed;
+            inset: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(0, 0, 0, 0.32);
+            opacity: 0;
+            pointer-events: none;
+            z-index: 1250;
+            transition: opacity 0.28s ease;
+        }
+
+        .player-cue-overlay.is-visible {
+            opacity: 1;
+        }
+
+        .player-cue {
+            background: #0f0f0f;
+            color: #f7f7f7;
+            border: 1px solid rgba(255, 255, 255, 0.22);
+            border-left: 6px solid var(--cue-accent, #f7f7f7);
+            padding: clamp(20px, 5vh, 32px) clamp(28px, 8vw, 52px);
+            border-radius: 14px;
+            font-size: clamp(1.6rem, 5vh, 2.6rem);
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            text-align: center;
+            box-shadow: 0 24px 52px rgba(0, 0, 0, 0.38);
+            transform: translateY(18px) scale(0.94);
+            transition: transform 0.32s cubic-bezier(0.25, 0.8, 0.25, 1);
+        }
+
+        .player-cue-overlay.is-visible .player-cue {
+            transform: translateY(0) scale(1);
+        }
+
         /* ヘッダー */
         #header {
             flex-shrink: 0;
