--- a/src/player.html
+++ b/src/player.html
@@ -125,6 +125,11 @@
             animation: metronomePulseWhite 0.3s ease-out;
         }
 
+        #header.pulse-weak {
+            animation: metronomePulseWeak 0.30s ease-out;
+            box-shadow: 0 0 16px rgba(255, 255, 255, 0.50);
+        }
+
         .header-content {
             display: flex;
             align-items: center;
@@ -211,6 +216,16 @@
         @keyframes metronomePulseWhite {
             0% {
                 background: #ffffff;
+            }
+
+            100% {
+                background: #2a2a2a;
+            }
+        }
+
+        @keyframes metronomePulseWeak {
+            0% {
+                background: #c7c7c7;
             }
 
             100% {
