--- a/src/controller.html
+++ b/src/controller.html
@@ -171,10 +171,27 @@
     <select id="input-device"></select>
   </div>
   <div>
-    <label for="output-device">Audio Output:</label>
-    <select id="output-device"></select>
+    <label for="main-output-device">Main Output:</label>
+    <select id="main-output-device"></select>
   </div>
-  <div id="io-status-panel"></div>
+  <div>
+    <label for="monitor1-device">Monitor 1:</label>
+    <select id="monitor1-device"></select>
+  </div>
+  <div>
+    <label for="monitor2-device">Monitor 2:</label>
+    <select id="monitor2-device"></select>
+  </div>
+  <div>
+    <label for="monitor3-device">Monitor 3:</label>
+    <select id="monitor3-device"></select>
+  </div>
+  <div id="io-status-panel" style="margin-top:8px;font-size:13px;color:#333;"></div>
+  <div id="output-assignment-panel"
+    style="margin-top:8px;padding:10px;border:1px solid #ccc;border-radius:4px;background:#fdfdfd;font-size:12px;color:#333;">
+    <div style="font-weight:600;margin-bottom:6px;">Output Assignments</div>
+    <div style="font-size:11px;color:#666;margin-bottom:6px;">Audio engine not initialized yet.</div>
+  </div>
 
   <div class="visualizer-controls">
     <h3>Visualizer Controls</h3>
