--- a/src/controller.html
+++ b/src/controller.html
@@ -187,7 +187,8 @@
     <select id="monitor3-device"></select>
   </div>
   <div id="io-status-panel" style="margin-top:8px;font-size:13px;color:#333;"></div>
-  <div id="output-assignment-panel" style="margin-top:8px;padding:10px;border:1px solid #ccc;border-radius:4px;background:#fdfdfd;font-size:12px;color:#333;">
+  <div id="output-assignment-panel"
+    style="margin-top:8px;padding:10px;border:1px solid #ccc;border-radius:4px;background:#fdfdfd;font-size:12px;color:#333;">
     <div style="font-weight:600;margin-bottom:6px;">Output Assignments</div>
     <div style="font-size:11px;color:#666;margin-bottom:6px;">Audio engine not initialized yet.</div>
   </div>
