feat: ビジュアルコントロールパネルを追加し、ビジュアルの有効/無効を切り替える機能を実装

--- a/src/performance.html
+++ b/src/performance.html
@@ -434,6 +434,21 @@
       </div>
     </div>
 
+    <!-- ビジュアルコントロールパネル -->
+    <div class="control-panel">
+      <h2>Visual Controls</h2>
+      <div class="button-group">
+        <button id="toggle-visuals-btn" class="primary">Enable Visuals</button>
+        <a href="/src/visualizer.html" target="_blank" style="text-decoration: none;">
+          <button id="open-visualizer-btn">Open Visualizer Window</button>
+        </a>
+      </div>
+      <div class="status-info" style="margin-top: 1rem;">
+        <span class="status-label">Visual Status:</span>
+        <span id="visual-status" class="status-value">Disabled</span>
+      </div>
+    </div>
+
     <!-- トラック管理（将来実装） -->
     <!--
     <div class="track-panel">
